Translate c-api/refcounting.po

--- a/c-api/refcounting.po
+++ b/c-api/refcounting.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-10 01:57+0200\n"
+"PO-Revision-Date: 2021-10-30 18:20+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/refcounting.rst:8
 msgid "Reference Counting"
@@ -35,7 +36,7 @@ msgstr ""
 
 #: ../Doc/c-api/refcounting.rst:16
 msgid "Increment the reference count for object *o*."
-msgstr ""
+msgstr "Incrementar el recuento de referencia para el objeto *o*."
 
 #: ../Doc/c-api/refcounting.rst:18
 msgid ""
@@ -43,15 +44,17 @@ msgid ""
 "term:`strong reference` in-place. The :c:func:`Py_NewRef` function can be "
 "used to create a new :term:`strong reference`."
 msgstr ""
+"Esta función se usa generalmente para convertir un :term:`borrowed "
+"reference` en un :term:`strong reference` en su lugar. La función :c:func:"
+"`Py_NewRef` se puede utilizar para crear un nuevo :term:`strong reference`."
 
 #: ../Doc/c-api/refcounting.rst:22
-#, fuzzy
 msgid ""
 "The object must not be ``NULL``; if you aren't sure that it isn't ``NULL``, "
 "use :c:func:`Py_XINCREF`."
 msgstr ""
-"Incrementa el conteo de referencia para el objeto *o*. El objeto no debe ser "
-"``NULL``; si no está seguro de que no sea ``NULL``, use :c:func:`Py_XINCREF`."
+"El objeto no debe ser ``NULL``; si no está seguro de que no sea ``NULL``, "
+"use :c:func:`Py_XINCREF`."
 
 #: ../Doc/c-api/refcounting.rst:28
 msgid ""
@@ -63,70 +66,79 @@ msgstr ""
 
 #: ../Doc/c-api/refcounting.rst:31
 msgid "See also :c:func:`Py_XNewRef`."
-msgstr ""
+msgstr "Ver también :c:func:`Py_XNewRef`."
 
 #: ../Doc/c-api/refcounting.rst:36
 msgid ""
 "Create a new :term:`strong reference` to an object: increment the reference "
 "count of the object *o* and return the object *o*."
 msgstr ""
+"Crea un nuevo :term:`strong reference` a un objeto: incrementa el recuento "
+"de referencias del objeto *o* y retorna el objeto *o*."
 
 #: ../Doc/c-api/refcounting.rst:39
 msgid ""
 "When the :term:`strong reference` is no longer needed, :c:func:`Py_DECREF` "
 "should be called on it to decrement the object reference count."
 msgstr ""
+"Cuando el :term:`strong reference` ya no sea necesario :c:func:`Py_DECREF` "
+"debe ser llamado para disminuir el recuento de referencias del objeto."
 
 #: ../Doc/c-api/refcounting.rst:42
 msgid ""
 "The object *o* must not be ``NULL``; use :c:func:`Py_XNewRef` if *o* can be "
 "``NULL``."
 msgstr ""
+"El objecto *o* no debe ser ``NULL``; use :c:func:`Py_XNewRef` si *o* puede "
+"ser ``NULL``."
 
 #: ../Doc/c-api/refcounting.rst:45
 msgid "For example::"
-msgstr ""
+msgstr "Por ejemplo::"
 
 #: ../Doc/c-api/refcounting.rst:50
 msgid "can be written as::"
-msgstr ""
+msgstr "puede ser escrito como::"
 
 #: ../Doc/c-api/refcounting.rst:54
 msgid "See also :c:func:`Py_INCREF`."
-msgstr ""
+msgstr "Ver también :c:func:`Py_INCREF`."
 
 #: ../Doc/c-api/refcounting.rst:61
 msgid "Similar to :c:func:`Py_NewRef`, but the object *o* can be NULL."
-msgstr ""
+msgstr "Similar a :c:func:`Py_NewRef`, pero el objecto *o* puede ser NULL."
 
 #: ../Doc/c-api/refcounting.rst:63
 msgid "If the object *o* is ``NULL``, the function just returns ``NULL``."
-msgstr ""
+msgstr "Si el objeto *o* es ``NULL``, la función solo retorna ``NULL``."
 
 #: ../Doc/c-api/refcounting.rst:70
 msgid "Decrement the reference count for object *o*."
-msgstr ""
+msgstr "Decrementa el conteo de referencia para el objeto *o*."
 
 #: ../Doc/c-api/refcounting.rst:72
 msgid ""
 "If the reference count reaches zero, the object's type's deallocation "
 "function (which must not be ``NULL``) is invoked."
 msgstr ""
+"Si el recuento de referencias llega a cero, se invoca la función de "
+"desasignación del tipo de objeto (que no debe ser ``NULL``)."
 
 #: ../Doc/c-api/refcounting.rst:75
 msgid ""
 "This function is usually used to delete a :term:`strong reference` before "
 "exiting its scope."
 msgstr ""
+"Esta función se usa generalmente para eliminar un :term:`strong reference` "
+"antes de salir de su alcance."
 
 #: ../Doc/c-api/refcounting.rst:78
-#, fuzzy
 msgid ""
 "The object must not be ``NULL``; if you aren't sure that it isn't ``NULL``, "
 "use :c:func:`Py_XDECREF`."
 msgstr ""
-"Incrementa el conteo de referencia para el objeto *o*. El objeto no debe ser "
-"``NULL``; si no está seguro de que no sea ``NULL``, use :c:func:`Py_XINCREF`."
+"El objeto no debe ser ``NULL``; si no está seguro de que no sea ``NULL``, "
+"use :c:func:`Py_XINCREF`."
 
 #: ../Doc/c-api/refcounting.rst:83
 msgid ""
