--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-26 23:19-0300\n"
+"PO-Revision-Date: 2021-10-28 10:51-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -457,24 +457,33 @@ msgid ""
 "Ensure that functions which can clear or replace the current exception are "
 "not called with an exception raised."
 msgstr ""
+"Asegúrese de que las funciones que pueden borrar o reemplazar la excepción "
+"actual no se invocan con una excepción lanzada."
 
 #: ../Doc/using/configure.rst:240
 msgid ""
 "The garbage collector (:func:`gc.collect` function) runs some basic checks "
 "on objects consistency."
 msgstr ""
+"El recolector de basura (función :func:`gc.collect`) ejecuta algunas "
+"comprobaciones básicas sobre la consistencia de los objetos."
 
 #: ../Doc/using/configure.rst:242
 msgid ""
 "The :c:macro:`Py_SAFE_DOWNCAST()` macro checks for integer underflow and "
 "overflow when downcasting from wide types to narrow types."
 msgstr ""
+"La macro :c:macro:`Py_SAFE_DOWNCAST()` comprueba el subdesbordamiento y el "
+"desbordamiento de enteros al realizar una conversión descendente de tipos "
+"anchos a tipos estrechos."
 
 #: ../Doc/using/configure.rst:245
 msgid ""
 "See also the :ref:`Python Development Mode <devmode>` and the :option:`--"
 "with-trace-refs` configure option."
 msgstr ""
+"Consultar también :ref:`Modo de Desarrollo de Python <devmode>` y la opción "
+"de configuración :option:`--with-trace-refs`."
 
 #: ../Doc/using/configure.rst:248
 msgid ""
@@ -483,6 +492,10 @@ msgid ""
 "option:`--with-trace-refs` option), which introduces the only ABI "
 "incompatibility."
 msgstr ""
+"Las compilaciones de lanzamiento y las compilaciones de depuración ahora son "
+"compatibles con ABI: definir la macro ``Py_DEBUG`` ya no implica la macro "
+"``Py_TRACE_REFS`` (consultar la opción :option:`--with-trace-refs`), que "
+"presenta la única Incompatibilidad ABI."
 
 #: ../Doc/using/configure.rst:256
 msgid "Debug options"
@@ -720,7 +733,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:444
 msgid "*STRING*: use a custom string"
-msgstr ""
+msgstr "*STRING*: usa una cadena de caracteres personalizada"
 
 #: ../Doc/using/configure.rst:446
 msgid "See the :mod:`ssl` module."
@@ -802,11 +815,11 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:495
 msgid "Python Build System"
-msgstr ""
+msgstr "Sistema de compilación Pyhton"
 
 #: ../Doc/using/configure.rst:498
 msgid "Main files of the build system"
-msgstr ""
+msgstr "Archivos principales del sistema de compilación"
 
 #: ../Doc/using/configure.rst:500
 msgid ":file:`configure.ac` => :file:`configure`;"
@@ -834,15 +847,17 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:508
 msgid "Main build steps"
-msgstr ""
+msgstr "Pasos principales de compilación"
 
 #: ../Doc/using/configure.rst:510
 msgid "C files (``.c``) are built as object files (``.o``)."
-msgstr ""
+msgstr "Los archivos C (``.c``) se crean como archivos objeto (``.o``)."
 
 #: ../Doc/using/configure.rst:511
 msgid "A static ``libpython`` library (``.a``) is created from objects files."
 msgstr ""
+"La biblioteca estática `libpython`` (``.a``) se crea a a partir de archivos "
+"de objetos."
 
 #: ../Doc/using/configure.rst:512
 msgid ""
@@ -858,11 +873,11 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:518
 msgid "Main Makefile targets"
-msgstr ""
+msgstr "Objetivos principales de Makefile"
 
 #: ../Doc/using/configure.rst:520
 msgid "``make``: Build Python with the standard library."
-msgstr ""
+msgstr "``make``: Compilar Python con la biblioteca estándar."
 
 #: ../Doc/using/configure.rst:521
 msgid ""
@@ -1074,7 +1089,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:681
 msgid "Optimization flags."
-msgstr ""
+msgstr "Banderas de optimización."
 
 #: ../Doc/using/configure.rst:685
 msgid "Strict or non-strict aliasing flags used to compile ``Python/dtoa.c``."
@@ -1198,7 +1213,7 @@ msgstr "Ejemplo: ``-lrt``."
 
 #: ../Doc/using/configure.rst:792
 msgid "Command to build a shared library."
-msgstr ""
+msgstr "Comando para construir una biblioteca compartida."
 
 #: ../Doc/using/configure.rst:794
 msgid "Default: ``@LDSHARED@ $(PY_LDFLAGS)``."
@@ -1206,7 +1221,7 @@ msgstr "Por defecto: ``@LDSHARED@ $(PY_LDFLAGS)``."
 
 #: ../Doc/using/configure.rst:798
 msgid "Command to build ``libpython`` shared library."
-msgstr ""
+msgstr "Comando para compilar la biblioteca compartida ``libpython``."
 
 #: ../Doc/using/configure.rst:800
 msgid "Default: ``@BLDSHARED@ $(PY_CORE_LDFLAGS)``."
@@ -1223,3 +1238,5 @@ msgstr "Por defecto: ``$(CONFIGURE_LDFLAGS_NODIST) $(LDFLAGS_NODIST)``."
 #: ../Doc/using/configure.rst:814
 msgid "Linker flags used for building the interpreter object files."
 msgstr ""
+"Banderas de vinculación que se utilizan para crear los archivos de objeto "
+"del intérprete."
