install/index.po

--- a/install/index.po
+++ b/install/index.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 19:19+0200\n"
+"PO-Revision-Date: 2021-10-30 14:37-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/install/index.rst:7
 msgid "Installing Python Modules (Legacy version)"
@@ -40,6 +41,10 @@ msgid ""
 "removed with the package. See the :ref:`What's New <distutils-deprecated>` "
 "entry for more information."
 msgstr ""
+"Todo el paquete ``distutils`` ha quedado obsoleto y se eliminará en Python "
+"3.12. Esta documentación se conserva solo como referencia y se eliminará con "
+"el paquete. Consulte la entrada :ref:`Qué hay de nuevo <distutils-"
+"deprecated>` para obtener más información."
 
 #: ../Doc/install/index.rst:23
 msgid ":ref:`installing-index`"
@@ -59,6 +64,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento se conserva únicamente hasta que la documentación de "
+"``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra de forma independiente toda la información relevante que se "
+"incluye actualmente aquí."
 
 #: ../Doc/install/index.rst:30
 msgid ""
@@ -365,7 +374,6 @@ msgstr ""
 "lib` (o :file:`build/lib.{plat}`) en el directorio de instalación elegido."
 
 #: ../Doc/install/index.rst:206
-#, fuzzy
 msgid ""
 "If you don't choose an installation directory---i.e., if you just run "
 "``setup.py install``\\ ---then the :command:`install` command installs to "
@@ -375,11 +383,11 @@ msgid ""
 "distribution being installed is pure Python or contains extensions (\"non-"
 "pure\"):"
 msgstr ""
-"Si no se elige un directorio de instalación---es decir, si solo ejecuta "
-"``setup.py install``\\---entonces el comando :command:`install` se instala "
+"Si no se elige un directorio de instalación ---es decir, si solo ejecuta "
+"``setup.py install``\\--- entonces el comando :command:`install` se instala "
 "en la ubicación estándar para módulos Python de terceros . Esta ubicación "
 "varía según la plataforma y la forma en la que se compiló/instaló Python. En "
-"Unix (y Mac OS X, que también está basado en Unix), depende de si la "
+"Unix (y macOS, que también está basado en Unix), depende de si la "
 "distribución del módulo que se está instalando es Python puro o contiene "
 "extensiones (\"no puro\"):"
 
@@ -470,7 +478,6 @@ msgstr ""
 "anteriores."
 
 #: ../Doc/install/index.rst:237
-#, fuzzy
 msgid ""
 ":file:`{prefix}` and :file:`{exec-prefix}` stand for the directories that "
 "Python is installed to, and where it finds its libraries at run-time.  They "
@@ -487,16 +494,16 @@ msgstr ""
 ":file:`{prefix}` y :file:`{exec-prefix}` representan los directorios en los "
 "que está instalado Python y donde encuentra sus bibliotecas en tiempo de "
 "ejecución. Siempre son los mismos en Windows, y muy a menudo los mismos en "
-"Unix y Mac OS X. Puede averiguar qué utiliza el Python que tiene instalado "
+"Unix y macOS. Puede averiguar qué utiliza el Python que tiene instalado "
 "para :file:`{prefix}` y :file:`{exec-prefix}` ejecutando Python en modo "
 "interactivo y escribiendo algunos comandos simples. En Unix, simplemente "
 "escriba ``python`` en el indicador de comandos de la shell. En Windows, "
 "elija :menuselection:`Inicio->Programas->Python X.Y->Python (línea de "
 "comando)`. Una vez que se inicia el intérprete, escriba el código Python en "
 "el indicador. Por ejemplo, si en mi sistema Linux, escribo las tres "
-"declaraciones de Python que se muestran a continuación, y con ello obtengo  "
-"el resultado como se muestra a continuación. Para averiguar mi :file:"
-"`{prefijo}` y :file:`{prefijo-exec}`:"
+"declaraciones de Python que se muestran a continuación, y con ello obtengo "
+"el resultado como se muestra a continuación, averiguo mi :file:`{prefix}` y :"
+"file:`{exec-prefix}`:"
 
 #: ../Doc/install/index.rst:259
 msgid ""
@@ -600,7 +607,6 @@ msgstr ""
 "want to install into it.  It is enabled with a simple option::"
 
 #: ../Doc/install/index.rst:312
-#, fuzzy
 msgid ""
 "Files will be installed into subdirectories of :data:`site.USER_BASE` "
 "(written as :file:`{userbase}` hereafter).  This scheme installs pure Python "
@@ -610,8 +616,8 @@ msgstr ""
 "Los archivos se instalarán en subdirectorios de :data:`site.USER_BASE` "
 "(escrito como :file:`{userbase}` en adelante). Este esquema instala módulos "
 "Python puros y módulos de extensión en la misma ubicación (también conocida "
-"como :data:`site.USER_SITE`). Estos son los valores para UNIX, incluido Mac "
-"OS X:"
+"como :data:`site.USER_SITE`). Estos son los valores para UNIX, incluido "
+"macOS:"
 
 #: ../Doc/install/index.rst:318 ../Doc/install/index.rst:329
 #: ../Doc/install/index.rst:380 ../Doc/install/index.rst:429
@@ -1407,14 +1413,13 @@ msgid "Location and names of config files"
 msgstr "Ubicación y nombres de los archivos de configuración"
 
 #: ../Doc/install/index.rst:737
-#, fuzzy
 msgid ""
 "The names and locations of the configuration files vary slightly across "
 "platforms.  On Unix and macOS, the three configuration files (in the order "
 "they are processed) are:"
 msgstr ""
 "Los nombres y las ubicaciones de los archivos de configuración varían "
-"ligeramente según las plataformas. En Unix y Mac OS X, los tres archivos de "
+"ligeramente según las plataformas. En Unix y macOS, los tres archivos de "
 "configuración (en el orden en que se procesan) son:"
 
 #: ../Doc/install/index.rst:742 ../Doc/install/index.rst:754
@@ -1826,6 +1831,14 @@ msgid ""
 "format.) For this reason you have to convert Python's library :file:"
 "`python25.lib` into the Borland format.  You can do this as follows:"
 msgstr ""
+"Esta subsección describe los pasos necesarios para utilizar Distutils con el "
+"compilador Borland C++ versión 5.5. Primero, debe saber que el formato de "
+"archivo de objetos de Borland (OMF) es diferente del formato utilizado por "
+"la versión de Python que puede descargar del sitio web de Python o "
+"ActiveState. (Python está construido con Microsoft Visual C++, que usa COFF "
+"como formato de archivo de objeto). Por esta razón, debe convertir la "
+"biblioteca de Python :file:`python25.lib` al formato Borland. Puede hacer "
+"esto de la siguiente manera:"
 
 #: ../Doc/install/index.rst:968
 msgid ""
