update translations for c-api/unicode.po

--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -11,16 +11,17 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 17:43+0200\n"
+"PO-Revision-Date: 2021-10-30 20:53-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/unicode.rst:6
 msgid "Unicode Objects and Codecs"
@@ -1285,9 +1286,8 @@ msgstr ""
 "configuración regional leída al iniciar Python)."
 
 #: ../Doc/c-api/unicode.rst:789 ../Doc/c-api/unicode.rst:825
-#, fuzzy
 msgid "This function ignores the :ref:`Python UTF-8 Mode <utf8-mode>`."
-msgstr "Esta función ignora el modo Python UTF-8."
+msgstr "Esta función ignora el :ref:`modo Python UTF-8 <utf8-mode>`."
 
 #: ../Doc/c-api/unicode.rst:793 ../Doc/c-api/unicode.rst:896
 msgid "The :c:func:`Py_DecodeLocale` function."
@@ -1421,6 +1421,8 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:884
 msgid "Decode a string from the :term:`filesystem encoding and error handler`."
 msgstr ""
+"Decodifica una cadena desde el :term:`codificador de sistema de archivos y "
+"gestor de errores <filesystem encoding and error handler>`."
 
 #: ../Doc/c-api/unicode.rst:886 ../Doc/c-api/unicode.rst:907
 #: ../Doc/c-api/unicode.rst:923
@@ -1450,14 +1452,13 @@ msgstr ""
 "Utilice el controlador de errores :c:data:`Py_FileSystemDefaultEncodeErrors`."
 
 #: ../Doc/c-api/unicode.rst:904
-#, fuzzy
 msgid ""
 "Decode a null-terminated string from the :term:`filesystem encoding and "
 "error handler`."
 msgstr ""
-"Decodifique una cadena terminada en nulo usando :c:data:"
-"`Py_FileSystemDefaultEncoding` y el :c:data:"
-"`Py_FileSystemDefaultEncodeErrors` controlador de errores."
+"Decodifica una cadena terminada en nulo desde el :term:`codificador de "
+"sistema de archivos y gestor de errores <filesystem encoding and error "
+"handler>`."
 
 #: ../Doc/c-api/unicode.rst:910
 msgid ""
@@ -1764,7 +1765,7 @@ msgstr "El tipo de retorno ahora es ``const char *`` en lugar de ``char *``."
 
 #: ../Doc/c-api/unicode.rst:1103
 msgid "This function is a part of the :ref:`limited API <stable>`."
-msgstr ""
+msgstr "Esta función es parte de la :ref:`API limitada <stable>`."
 
 #: ../Doc/c-api/unicode.rst:1109
 msgid "As :c:func:`PyUnicode_AsUTF8AndSize`, but does not store the size."
