--- a/c-api/apiabiversion.po
+++ b/c-api/apiabiversion.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-08 01:45+0200\n"
+"PO-Revision-Date: 2021-10-30 21:22-0300\n"
 "Last-Translator: \n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/apiabiversion.rst:7
 msgid "API and ABI Versioning"
@@ -31,59 +32,53 @@ msgid ""
 "correspond to the version code is **built** with, not necessarily the "
 "version used at **run time**."
 msgstr ""
+"CPython expone su número de versión en las siguientes macros. Tenga en "
+"cuenta que estos corresponden a la versión con la que se **construye** el "
+"código, no necesariamente la versión utilizada en **tiempo de ejecución**."
 
 #: ../Doc/c-api/apiabiversion.rst:13
 msgid ""
 "See :ref:`stable` for a discussion of API and ABI stability across versions."
 msgstr ""
+"Consulte :ref:`stable` para obtener una discusión sobre la estabilidad de "
+"API y ABI en todas las versiones."
 
 #: ../Doc/c-api/apiabiversion.rst:17
-#, fuzzy
 msgid "The ``3`` in ``3.4.1a2``."
-msgstr "``PY_MAJOR_VERSION`` (el ``3`` en ``3.4.1a2``)"
+msgstr "El ``3`` en ``3.4.1a2``."
 
 #: ../Doc/c-api/apiabiversion.rst:21
-#, fuzzy
 msgid "The ``4`` in ``3.4.1a2``."
-msgstr "``PY_MINOR_VERSION`` (el ``4`` en ``3.4.1a2``)"
+msgstr "El ``4`` en ``3.4.1a2``."
 
 #: ../Doc/c-api/apiabiversion.rst:25
-#, fuzzy
 msgid "The ``1`` in ``3.4.1a2``."
-msgstr "``PY_MICRO_VERSION`` (el ``1`` en ``3.4.1a2``)"
+msgstr "El ``1`` en ``3.4.1a2``."
 
 #: ../Doc/c-api/apiabiversion.rst:29
-#, fuzzy
 msgid ""
 "The ``a`` in ``3.4.1a2``. This can be ``0xA`` for alpha, ``0xB`` for beta, "
 "``0xC`` for release candidate or ``0xF`` for final."
 msgstr ""
-"``PY_RELEASE_LEVEL`` (``0xA`` para alfa, ``0xB`` para beta, ``0xC`` para el "
-"candidato de lanzamiento y ``0xF`` para final), en este caso es alfa."
+"La ``a`` en ``3.4.1a2``. Puede ser ``0xA`` para la versión alfa, ``0xB`` "
+"para la versión beta, ``0xC`` para la versión candidata o ``0xF`` para la "
+"versión final."
 
 #: ../Doc/c-api/apiabiversion.rst:35
-#, fuzzy
 msgid "The ``2`` in ``3.4.1a2``. Zero for final releases."
-msgstr ""
-"``PY_RELEASE_SERIAL`` (el ``2`` en ``3.4.1a2``, cero para lanzamientos "
-"finales)"
+msgstr "El ``2`` en ``3.4.1a2``, cero para lanzamientos finales."
 
 #: ../Doc/c-api/apiabiversion.rst:39
-#, fuzzy
 msgid "The Python version number encoded in a single integer."
-msgstr ""
-"``PY_VERSION_HEX`` es el número de versión de Python codificado en un solo "
-"entero."
+msgstr "El número de versión de Python codificado en un solo entero."
 
 #: ../Doc/c-api/apiabiversion.rst:41
-#, fuzzy
 msgid ""
 "The underlying version information can be found by treating it as a 32 bit "
 "number in the following manner:"
 msgstr ""
-"Por ejemplo, si ``PY_VERSION_HEX`` se establece en ``0x030401a2``, la "
-"información de la versión subyacente se puede encontrar tratándola como un "
-"número de 32 bits de la siguiente manera:"
+"La información de la versión subyacente se puede encontrar tratándola como "
+"un número de 32 bits de la siguiente manera:"
 
 #: ../Doc/c-api/apiabiversion.rst:45
 msgid "Bytes"
@@ -99,100 +94,91 @@ msgstr "Significado"
 
 #: ../Doc/c-api/apiabiversion.rst:45
 msgid "Value for ``3.4.1a2``"
-msgstr ""
+msgstr "Valor para ``3.4.1a2``"
 
 #: ../Doc/c-api/apiabiversion.rst:47
 msgid "1"
-msgstr ""
+msgstr "1"
 
 #: ../Doc/c-api/apiabiversion.rst:47
-#, fuzzy
 msgid "1-8"
-msgstr "``1-8``"
+msgstr "1-8"
 
 #: ../Doc/c-api/apiabiversion.rst:47
 msgid "``PY_MAJOR_VERSION``"
-msgstr ""
+msgstr "``PY_MAJOR_VERSION``"
 
 #: ../Doc/c-api/apiabiversion.rst:47
-#, fuzzy
 msgid "``0x03``"
-msgstr "``3``"
+msgstr "``0x03``"
 
 #: ../Doc/c-api/apiabiversion.rst:49
 msgid "2"
-msgstr ""
+msgstr "2"
 
 #: ../Doc/c-api/apiabiversion.rst:49
-#, fuzzy
 msgid "9-16"
-msgstr "``9-16``"
+msgstr "9-16"
 
 #: ../Doc/c-api/apiabiversion.rst:49
 msgid "``PY_MINOR_VERSION``"
-msgstr ""
+msgstr "``PY_MINOR_VERSION``"
 
 #: ../Doc/c-api/apiabiversion.rst:49
-#, fuzzy
 msgid "``0x04``"
-msgstr "``4``"
+msgstr "``0x04``"
 
 #: ../Doc/c-api/apiabiversion.rst:51
 msgid "3"
-msgstr ""
+msgstr "3"
 
 #: ../Doc/c-api/apiabiversion.rst:51
-#, fuzzy
 msgid "17-24"
-msgstr "``17-24``"
+msgstr "17-24"
 
 #: ../Doc/c-api/apiabiversion.rst:51
 msgid "``PY_MICRO_VERSION``"
-msgstr ""
+msgstr "``PY_MICRO_VERSION``"
 
 #: ../Doc/c-api/apiabiversion.rst:51
-#, fuzzy
 msgid "``0x01``"
-msgstr "``1``"
+msgstr "``0x01``"
 
 #: ../Doc/c-api/apiabiversion.rst:53
 msgid "4"
-msgstr ""
+msgstr "4"
 
 #: ../Doc/c-api/apiabiversion.rst:53
-#, fuzzy
 msgid "25-28"
-msgstr "``25-28``"
+msgstr "25-28"
 
 #: ../Doc/c-api/apiabiversion.rst:53
 msgid "``PY_RELEASE_LEVEL``"
-msgstr ""
+msgstr "``PY_RELEASE_LEVEL``"
 
 #: ../Doc/c-api/apiabiversion.rst:53
-#, fuzzy
 msgid "``0xA``"
-msgstr "``4``"
+msgstr "``0xA``"
 
 #: ../Doc/c-api/apiabiversion.rst:55
-#, fuzzy
 msgid "29-32"
-msgstr "``29-32``"
+msgstr "29-32"
 
 #: ../Doc/c-api/apiabiversion.rst:55
 msgid "``PY_RELEASE_SERIAL``"
-msgstr ""
+msgstr "``PY_RELEASE_SERIAL``"
 
 #: ../Doc/c-api/apiabiversion.rst:55
-#, fuzzy
 msgid "``0x2``"
-msgstr "``2``"
+msgstr "``0x2``"
 
 #: ../Doc/c-api/apiabiversion.rst:58
-#, fuzzy
 msgid ""
 "Thus ``3.4.1a2`` is hexversion ``0x030401a2`` and ``3.10.0`` is hexversion "
 "``0x030a00f0``."
-msgstr "Así ``3.4.1a2`` es la hexadecimal ``0x030401a2``."
+msgstr ""
+"Así, ``3.4.1a2`` es la hexadecimal ``0x030401a2`` y ``3.10.0`` es la "
+"hexadecimal ``0x030a00f0``."
 
 #: ../Doc/c-api/apiabiversion.rst:62
 msgid "All the given macros are defined in :source:`Include/patchlevel.h`."
