--- a/c-api/module.po
+++ b/c-api/module.po
@@ -761,7 +761,7 @@ msgstr ""
 #: ../Doc/c-api/module.rst:494
 msgid ""
 "The new :c:func:`PyModule_AddObjectRef` function is recommended, since it is "
-"easy to introduce reference leaks by missing the :c:func:"
+"easy to introduce reference leaks by misusing the :c:func:"
 "`PyModule_AddObject` function."
 msgstr ""
 "Se recomienda la nueva función :c:func:`PyModule_AddObjectRef`, ya que es "
