--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -1153,7 +1153,7 @@ msgid ""
 "code was using the C library's :c:func:`atof` function."
 msgstr ""
 "Los módulos :mod:`locale` deja que el software de Python seleccione varias "
-"conversiones y despliegue convenciones que estan localizadas en un pais "
+"conversiones y despliegue convenciones que están localizadas en un país "
 "particular o lenguaje. Sin embargo, el módulo es cuidadoso en no cambiar el "
 "local numérico porque la implementación de Python requería que la "
 "configuración regional numérica permaneciera establecida en la configuración "
