Fix small issues

--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -106,7 +106,7 @@ msgid ""
 "is immutable and hashable, it may be used as a dictionary key or as a member "
 "of another set."
 msgstr ""
-"La función de conjuntos integrados :func: `frozenset` es una versión "
+"La función de conjuntos integrados :func:`frozenset` es una versión "
 "inmutable de :func:`set`. Como es inmutable y hashable (su valor no cambia), "
 "se puede usar como una llave de diccionario o como parte de otro set."
 
@@ -548,9 +548,9 @@ msgid ""
 "If you want to reverse an iterator, first convert it to  a list with :func:"
 "`list`. ::"
 msgstr ""
-"Señalar que la función :func:`reversed`solo acepta secuencias, no iteradores "
-"arbitrarios. Si se quiere revertir un iterador, primero se debe convertir a "
-"una lista usando la función :func:`list`.:"
+"Señalar que la función :func:`reversed` solo acepta secuencias, no "
+"iteradores arbitrarios. Si se quiere revertir un iterador, primero se debe "
+"convertir a una lista usando la función :func:`list`.:"
 
 #: ../Doc/whatsnew/2.4.rst:376
 msgid ":pep:`322` - Reverse Iteration"
@@ -877,8 +877,8 @@ msgstr ""
 "Un nuevo módulo, :mod:`decimal`, fue añadido a la librería estándar de "
 "Python. Esta contiene dos clases, :class:`Decimal` y :class:`Context`. Las "
 "instancias de la clase decimal :class:`Decimal` representan números y la "
-"instancia de la clase contexto son usadas para condensar varios ajustes como "
-"la precisión y el modo de redondeo por defecto."
+"instancia de la :class:`Context` son usadas para condensar varios ajustes "
+"como la precisión y el modo de redondeo por defecto."
 
 #: ../Doc/whatsnew/2.4.rst:544
 msgid ""
@@ -890,8 +890,8 @@ msgstr ""
 "Las instancias de la clase :class:`Decimal` son inmutables como los números "
 "enteros y números de punto flotante en Python, una vez han sido creadas no "
 "se puede cambiar el valor de lo que la instancia representa. Las instancias "
-"de la :class: `Decimal` pueden ser creados desde números enteros o cadenas "
-"de texto:"
+"de la :class:`Decimal` pueden ser creados desde números enteros o cadenas de "
+"texto:"
 
 #: ../Doc/whatsnew/2.4.rst:555
 msgid ""
@@ -976,7 +976,7 @@ msgid ""
 "Instances of the :class:`Context` class encapsulate several settings for "
 "decimal operations:"
 msgstr ""
-"Las instancias de la clase `Context` encapsulan varios ajustes para "
+"Las instancias de la :class:`Context` encapsulan varios ajustes para "
 "operaciones con decimales:"
 
 #: ../Doc/whatsnew/2.4.rst:636
@@ -1158,7 +1158,7 @@ msgstr ""
 "local numérico porque la implementación de Python requería que la "
 "configuración regional numérica permaneciera establecida en la configuración "
 "regional `` 'C' ' . A menudo, esto se debía a que el código utilizaba la "
-"función: c: func:`atof` de la biblioteca C."
+"función :c:func:`atof` de la biblioteca C."
 
 #: ../Doc/whatsnew/2.4.rst:744
 msgid ""
@@ -1343,9 +1343,9 @@ msgstr ""
 "El ultimo ejemplo el cual usa el parámetro *cmp*  es la antigua forma de "
 "ejecutar el orden sin distinción de mayúsculas y minúsculas. Funciona pero "
 "es mas lento en vez de usar el parámetro *key*.  El uso de *key* llama al "
-"método : meth: `lower` una vez para cada elemento de la lista mientras el "
-"uso de *cmp* lo llamara dos veces para cada comparación, entonces al usar * "
-"key * se guardan las llamadas del método :meth:`lower` ."
+"método :meth:`lower` una vez para cada elemento de la lista mientras el uso "
+"de *cmp* lo llamara dos veces para cada comparación, entonces al usar * key "
+"* se guardan las llamadas del método :meth:`lower`."
 
 #: ../Doc/whatsnew/2.4.rst:840
 msgid ""
