--- a/c-api/module.po
+++ b/c-api/module.po
@@ -765,7 +765,8 @@ msgid ""
 "`PyModule_AddObject` function."
 msgstr ""
 "Se recomienda la nueva función :c:func:`PyModule_AddObjectRef`, ya que es "
-"sencillo introducir fugas de referencias por un uso incorrecto de :c:func: "
+"sencillo introducir fugas de referencias por un uso incorrecto de la función :c:func: "
+""`PyModule_AddObject`."
 
 #: ../Doc/c-api/module.rst:500
 msgid ""
