Reemplaza objecto -> objeto
Éste es un error común que pasa por alto ya que el diccionario de
hunspell-es contiene la palabra objecto (de "objectar", y que según la
RAE está en desuso). Me percaté de esto porque localmente estaba usando
otro diccionario (myspell-es), el cual no tiene la palabra, y por lo
tanto me tiraba errores.

Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -203,7 +203,7 @@ msgid ""
 "resulting C string may contain embedded NUL bytes. Unicode objects are "
 "converted to C strings using ``'utf-8'`` encoding."
 msgstr ""
-"Este formato acepta objetos Unicode, así como objectos de tipo bytes. Llena "
+"Este formato acepta objetos Unicode, así como objetos de tipo bytes. Llena "
 "una estructura  :c:type:`Py_buffer` proporcionada por la persona que llama. "
 "En este caso la cadena de caracteres de C resultante puede contener bytes "
 "NUL embebidos. Los objetos Unicode se convierten en cadenas de caracteres C "
@@ -284,7 +284,7 @@ msgid ""
 "contain embedded null bytes; if it does, a :exc:`ValueError` exception is "
 "raised."
 msgstr ""
-"Este formato convierte un objecto de tipo bytes a un puntero C a una cadena "
+"Este formato convierte un objeto de tipo bytes a un puntero C a una cadena "
 "de caracteres; no acepta objetos Unicode. El búfer de bytes no debe contener "
 "bytes nulos incrustados; si lo hace, se lanza una excepción :exc:"
 "`ValueError`."
@@ -351,7 +351,7 @@ msgid ""
 "`PyObject*`."
 msgstr ""
 "Requiere que el objeto Python es un objeto :class:`bytearray`, sin intentar "
-"ninguna conversión. Lanza  :exc:`TypeError` si el objeto no es un objecto :"
+"ninguna conversión. Lanza  :exc:`TypeError` si el objeto no es un objeto :"
 "class:`bytearray`. La variable C también puede ser declarada como :c:type:"
 "`PyObject*`."
 
@@ -1410,7 +1410,7 @@ msgid ""
 "Convert a C :c:type:`int` representing a byte to a Python :class:`bytes` "
 "object of length 1."
 msgstr ""
-"Convierte un :c:type:`int` de C representando un byte a un objecto :class:"
+"Convierte un :c:type:`int` de C representando un byte a un objeto :class:"
 "`bytes` de Python de largo 1."
 
 #: ../Doc/c-api/arg.rst:624
@@ -1418,8 +1418,8 @@ msgid ""
 "Convert a C :c:type:`int` representing a character to Python :class:`str` "
 "object of length 1."
 msgstr ""
-"Convierte un :c:type:`int` de C representando un carácter a un objecto :"
-"class:`str` de Python de largo 1."
+"Convierte un :c:type:`int` de C representando un carácter a un objeto :class:"
+"`str` de Python de largo 1."
 
 #: ../Doc/c-api/arg.rst:628
 msgid "Convert a C :c:type:`double` to a Python floating point number."
