--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -1017,7 +1017,7 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:668
 msgid "Unicode Exception Objects"
-msgstr "Objectos Unicode de Excepción"
+msgstr "Objetos Unicode de Excepción"
 
 #: ../Doc/c-api/exceptions.rst:670
 msgid ""
