--- a/c-api/file.po
+++ b/c-api/file.po
@@ -183,7 +183,7 @@ msgid ""
 "instead of the :func:`repr`.  Return ``0`` on success or ``-1`` on failure; "
 "the appropriate exception will be set."
 msgstr ""
-"Escribe el objecto *obj* en el objeto archivo *p*. El único indicador "
+"Escribe el objeto *obj* en el objeto archivo *p*. El único indicador "
 "admitido para *flags* es :const:`Py_PRINT_RAW`; si se proporciona, se "
 "escribe el :func:`str` del objeto en lugar de :func:`repr`. Retorna ``0`` en "
 "caso de éxito o ``-1`` en caso de error; se establecerá la excepción "
