--- a/c-api/refcounting.po
+++ b/c-api/refcounting.po
@@ -89,7 +89,7 @@ msgid ""
 "The object *o* must not be ``NULL``; use :c:func:`Py_XNewRef` if *o* can be "
 "``NULL``."
 msgstr ""
-"El objecto *o* no debe ser ``NULL``; use :c:func:`Py_XNewRef` si *o* puede "
+"El objeto *o* no debe ser ``NULL``; use :c:func:`Py_XNewRef` si *o* puede "
 "ser ``NULL``."
 
 #: ../Doc/c-api/refcounting.rst:45
@@ -106,7 +106,7 @@ msgstr "Ver también :c:func:`Py_INCREF`."
 
 #: ../Doc/c-api/refcounting.rst:61
 msgid "Similar to :c:func:`Py_NewRef`, but the object *o* can be NULL."
-msgstr "Similar a :c:func:`Py_NewRef`, pero el objecto *o* puede ser NULL."
+msgstr "Similar a :c:func:`Py_NewRef`, pero el objeto *o* puede ser NULL."
 
 #: ../Doc/c-api/refcounting.rst:63
 msgid "If the object *o* is ``NULL``, the function just returns ``NULL``."
