--- a/extending/newtypes_tutorial.po
+++ b/extending/newtypes_tutorial.po
@@ -174,7 +174,7 @@ msgstr ""
 
 #: ../Doc/extending/newtypes_tutorial.rst:88
 msgid "The second bit is the definition of the type object. ::"
-msgstr "La segunda parte es la definición del tipo de objecto. ::"
+msgstr "La segunda parte es la definición del tipo de objeto. ::"
 
 #: ../Doc/extending/newtypes_tutorial.rst:101
 msgid ""
