--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -364,7 +364,7 @@ msgstr ""
 "no es la de :c:type:`PyCFunction`, el compilador requiere una conversión de "
 "tipo en la tabla de métodos. A pesar de que :c:type:`PyCFunction` define el "
 "primer parámetro como :c:type:`PyObject*`, es común que la implementación "
-"del método utiliza el tipo específico C del objecto *self*."
+"del método utiliza el tipo específico C del objeto *self*."
 
 #: ../Doc/c-api/structures.rst:260
 msgid ""
