--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 20:08+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-26 20:21+0200\n"
+"Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/sys.rst:6
 msgid "Operating System Utilities"
@@ -199,6 +200,9 @@ msgid ""
 "with the :c:func:`PyConfig_SetBytesString` function which ensures that :ref:"
 "`Python is preinitialized <c-preinit>`."
 msgstr ""
+"Esta función no debe llamarse directamente: utilice la API :c:type:"
+"`PyConfig` con la función :c:func:`PyConfig_SetBytesString` que asegura que :"
+"ref:`Python está preinicializado <c-preinit>`."
 
 #: ../Doc/c-api/sys.rst:126 ../Doc/c-api/sys.rst:193
 msgid ""
@@ -206,6 +210,9 @@ msgid ""
 "preinit>` and so that the LC_CTYPE locale is properly configured: see the :c:"
 "func:`Py_PreInitialize` function."
 msgstr ""
+"Esta función no debe llamarse antes de que :ref:`Python esté preinicializado "
+"<c-preinit>` y para que la configuración local LC_CTYPE esté correctamente "
+"configurada: véase la función :c:func:`Py_PreInitialize`."
 
 #: ../Doc/c-api/sys.rst:130
 #, fuzzy
@@ -252,6 +259,9 @@ msgid ""
 "`PyConfig_Read`: see :c:member:`~PyConfig.filesystem_encoding` and :c:member:"
 "`~PyConfig.filesystem_errors` members of :c:type:`PyConfig`."
 msgstr ""
+"El :term:`filesystem encoding and error handler` son seleccionados por :c:"
+"func:`PyConfig_Read`: ver :c:member:`~PyConfig.filesystem_encoding` y :c:"
+"member:`~PyConfig.filesystem_errors` que pertenecen a :c:type:`PyConfig`."
 
 #: ../Doc/c-api/sys.rst:149
 msgid ""
@@ -298,6 +308,10 @@ msgid ""
 "<surrogateescape>`, surrogate characters in the range U+DC80..U+DCFF are "
 "converted to bytes 0x80..0xFF."
 msgstr ""
+"Codifica una cadena de caracteres amplios según el término :term:`filesystem "
+"encoding and error handler`. Si el gestor de errores es :ref:"
+"`surrogateescape error handler <surrogateescape>`, los caracteres "
+"sustituidos en el rango U+DC80..U+DCFF se convierten en bytes 0x80..0xFF."
 
 #: ../Doc/c-api/sys.rst:178
 msgid ""
