--- a/faq/gui.po
+++ b/faq/gui.po
@@ -64,7 +64,7 @@ msgid ""
 "wiki.python.org/moin/GuiProgramming#Platform-specific_Frameworks>`_ GUI "
 "frameworks can be found on the python wiki."
 msgstr ""
-"Dependiendo de a que plataform(as) estés apuntando, hay también múltiples "
+"Dependiendo de a que plataforma(s) estés apuntando, hay también múltiples "
 "alternativas. Una lista de conjuntos de herramientas `multiplataforma "
 "<https://wiki.python.org/moin/GuiProgramming#Cross-Platform_Frameworks>`_ y "
 "`de plataforma específica <https://wiki.python.org/moin/"
