Corrige entradas fuzzy en distributing/index.po
No vi un issue creado esta vez para este archivo, pero igualmente
necesita ser ajustado, así que aquí va.

Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/distributing/index.po
+++ b/distributing/index.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 10:49+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-11-12 10:29+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distributing/index.rst:5
 msgid "Distributing Python Modules"
@@ -84,13 +85,12 @@ msgid "Key terms"
 msgstr "Términos clave"
 
 #: ../Doc/distributing/index.rst:34
-#, fuzzy
 msgid ""
 "the `Python Package Index <https://pypi.org>`__ is a public repository of "
 "open source licensed packages made available for use by other Python users"
 msgstr ""
-"el `Python Packaging Index <https://pypi.org>`__ es un repositorio público "
-"de paquetes con licencia de código abierto puestos a disposición para su uso "
+"el `Python Package Index <https://pypi.org>`__ es un repositorio público de "
+"paquetes con licencia de código abierto puestos a disposición para su uso "
 "por otros usuarios de Python"
 
 #: ../Doc/distributing/index.rst:37
@@ -235,12 +235,11 @@ msgstr ""
 "pueden instalar invocando el módulo ``pip`` en la línea de comando::"
 
 #: ../Doc/distributing/index.rst:104
-#, fuzzy
 msgid ""
 "For POSIX users (including macOS and Linux users), these instructions assume "
 "the use of a :term:`virtual environment`."
 msgstr ""
-"Para los usuarios POSIX (incluidos los usuarios de Mac OS X y Linux), estas "
+"Para los usuarios POSIX (incluidos los usuarios de macOS y Linux), estas "
 "instrucciones asumen el uso de un :term:`virtual environment`."
 
 #: ../Doc/distributing/index.rst:107
@@ -281,9 +280,8 @@ msgid "`Building and packaging the project`_"
 msgstr "`Compilando y empaquetando el proyecto`_"
 
 #: ../Doc/distributing/index.rst:130
-#, fuzzy
 msgid "`Uploading the project to the Python Package Index`_"
-msgstr "`Subiendo el proyecto al Python Packaging Index`_"
+msgstr "`Subiendo el proyecto al Python Package Index`_"
 
 #: ../Doc/distributing/index.rst:131
 msgid "`The .pypirc file`_"
@@ -306,10 +304,9 @@ msgid "This isn't an easy topic, but here are a few tips:"
 msgstr "Este no es un tema fácil, pero aquí hay algunos consejos:"
 
 #: ../Doc/distributing/index.rst:153
-#, fuzzy
 msgid "check the Python Package Index to see if the name is already in use"
 msgstr ""
-"verifique el \"Python Packaging Index\" para ver si el nombre ya está en uso"
+"verifique el \"Python Package Index\" para ver si el nombre ya está en uso"
 
 #: ../Doc/distributing/index.rst:154
 msgid ""
