--- a/extending/newtypes_tutorial.po
+++ b/extending/newtypes_tutorial.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-06-26 22:37+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-11-12 10:39+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/extending/newtypes_tutorial.rst:7
 msgid "Defining Extension Types: Tutorial"
@@ -136,7 +137,6 @@ msgid "The first bit is::"
 msgstr "La primera parte es::"
 
 #: ../Doc/extending/newtypes_tutorial.rst:67
-#, fuzzy
 msgid ""
 "This is what a Custom object will contain.  ``PyObject_HEAD`` is mandatory "
 "at the start of each object struct and defines a field called ``ob_base`` of "
@@ -152,7 +152,7 @@ msgstr ""
 "objeto de tipo y un recuento de referencia (estos pueden ser accedidos "
 "mediante las macros :c:macro:`Py_REFCNT` y :c:macro:`Py_TYPE` "
 "respectivamente). El motivo de la macro es abstraer el diseño y habilitar "
-"campos adicionales en las compilaciones de depuración."
+"campos adicionales en las  :ref:`compilaciones de depuración <debug-build>`."
 
 #: ../Doc/extending/newtypes_tutorial.rst:76
 msgid ""
