--- a/faq/gui.po
+++ b/faq/gui.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 11:10+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-11-09 22:34-0600\n"
+"Last-Translator: Erick G. Islas Osuna <erickisos653@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/gui.rst:5
 msgid "Graphic User Interface FAQ"
@@ -34,14 +35,10 @@ msgid "General GUI Questions"
 msgstr "Preguntas generales de la GUI"
 
 #: ../Doc/faq/gui.rst:18
-#, fuzzy
 msgid "What GUI toolkits exist for Python?"
-msgstr ""
-"¿Qué conjuntos de herramientas de GUI específicas por plataforma existen "
-"para Python?"
+msgstr "¿Qué conjuntos de herramientas de GUI existen para Python?"
 
 #: ../Doc/faq/gui.rst:20
-#, fuzzy
 msgid ""
 "Standard builds of Python include an object-oriented interface to the Tcl/Tk "
 "widget set, called :ref:`tkinter <Tkinter>`.  This is probably the easiest "
@@ -55,8 +52,8 @@ msgstr ""
 "<Tkinter>`. Esta es probablemente la más fácil de instalar (ya que viene "
 "incluida con la mayoría de `distribuciones binarias <https://www.python.org/"
 "downloads/>`_ de Python) y usar. Para obtener más información sobre Tk, "
-"incluyendo referencias a la fuente, ver la `Tcl/Tk página de inicio <https://"
-"www.tcl.tk>`_. Tcl/Tk es totalmente potable a Mac OSX, Windows y plataformas "
+"incluyendo referencias a la fuente, ver la `Página de inicio Tcl/Tk <https://"
+"www.tcl.tk>`_. Tcl/Tk es totalmente portable a macOS, Windows y plataformas "
 "Unix."
 
 #: ../Doc/faq/gui.rst:28
@@ -67,6 +64,12 @@ msgid ""
 "wiki.python.org/moin/GuiProgramming#Platform-specific_Frameworks>`_ GUI "
 "frameworks can be found on the python wiki."
 msgstr ""
+"Dependiendo de a que plataforma(s) estés apuntando, hay también múltiples "
+"alternativas. Una lista de conjuntos de herramientas `multiplataforma "
+"<https://wiki.python.org/moin/GuiProgramming#Cross-Platform_Frameworks>`_ y "
+"`de plataforma específica <https://wiki.python.org/moin/"
+"GuiProgramming#Platform-specific_Frameworks>`_ puede ser encontrada en la "
+"wiki de Python."
 
 #: ../Doc/faq/gui.rst:36
 msgid "Tkinter questions"
