--- a/tutorial/index.po
+++ b/tutorial/index.po
@@ -103,7 +103,7 @@ msgid ""
 "the various Python library modules described in :ref:`library-index`."
 msgstr ""
 "Este tutorial no pretende ser exhaustivo ni cubrir cada una de las "
-"caracterìsticas, ni siquiera las más utilizadas. En vez de eso, pretende "
+"características, ni siquiera las más utilizadas. En vez de eso, pretende "
 "introducir muchas de las funcionalidades más notables y brindar una idea "
 "clara acerca del estilo y el tipo de lenguaje. Después de leerlo podrás leer "
 "y escribir módulos y programas en Python y estarás listo para aprender más "
