--- a/tutorial/index.po
+++ b/tutorial/index.po
@@ -103,11 +103,12 @@ msgid ""
 "the various Python library modules described in :ref:`library-index`."
 msgstr ""
 "Este tutorial no pretende ser exhaustivo ni cubrir cada una de las "
-"características, ni siquiera las más utilizadas. En vez de eso, pretende "
-"introducir muchas de las funcionalidades más notables y brindar una idea "
-"clara acerca del estilo y el tipo de lenguaje. Después de leerlo podrás leer "
-"y escribir módulos y programas en Python y estarás listo para aprender más "
-"acerca de varias librerías y módulos descritos en :ref:`library-index`."
+"características del lenguaje, ni siquiera las más utilizadas. En vez de eso, "
+"pretende introducir muchas de las funcionalidades más notables y brindar una "
+"idea clara acerca del estilo y el tipo de lenguaje que es Python. Después de "
+"leerlo podrás leer y escribir módulos y programas en Python, y estarás listo "
+"para aprender más acerca de las diversas librerías y módulos descritos en :"
+"ref:`library-index`."
 
 #: ../Doc/tutorial/index.rst:40
 msgid "The :ref:`glossary` is also worth going through."
