--- a/tutorial/index.po
+++ b/tutorial/index.po
@@ -11,19 +11,20 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2019-05-06 15:10-0400\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-11-13 22:59-0600\n"
+"Last-Translator: Erick G. Islas Osuna <erickisos653@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/index.rst:5
 msgid "The Python Tutorial"
-msgstr "Tutorial de Python"
+msgstr "El tutorial de Python"
 
 #: ../Doc/tutorial/index.rst:7
 msgid ""
@@ -41,7 +42,6 @@ msgstr ""
 "áreas, para la mayoría de plataformas."
 
 #: ../Doc/tutorial/index.rst:13
-#, fuzzy
 msgid ""
 "The Python interpreter and the extensive standard library are freely "
 "available in source or binary form for all major platforms from the Python "
@@ -49,12 +49,12 @@ msgid ""
 "site also contains distributions of and pointers to many free third party "
 "Python modules, programs and tools, and additional documentation."
 msgstr ""
-"El intérprete de Python y la extensiva librería estándar se encuentran "
-"disponibles libremente en código fuente y forma binaria para la mayoría de "
-"plataformas desde la Web de Python, https://www.python.org/, y se pueden "
-"distribuir libremente. El mismo sitio contiene distribuciones y direcciones "
-"a muchos módulos de Python de terceras partes, programas, herramientas y "
-"adicionalmente documentación."
+"El intérprete de Python y la extensa librería estándar se encuentran "
+"disponibles libremente en código fuente y de forma binaria para la mayoría "
+"de las plataformas desde la Web de Python, https://www.python.org/, y se "
+"pueden distribuir libremente. El mismo sitio también contiene distribuciones "
+"y referencias a muchos módulos libres de Python de terceros, programas, "
+"herramientas y documentación adicional."
 
 #: ../Doc/tutorial/index.rst:19
 msgid ""
@@ -63,7 +63,7 @@ msgid ""
 "suitable as an extension language for customizable applications."
 msgstr ""
 "El intérprete de Python es fácilmente extensible con funciones y tipos de "
-"datos implementados en C o C++ (o otros lenguajes que permitan ser llamados "
+"datos implementados en C o C++ (u otros lenguajes que permitan ser llamados "
 "desde C). Python también es apropiado como un lenguaje para extender "
 "aplicaciones modificables."
 
@@ -102,12 +102,13 @@ msgid ""
 "write Python modules and programs, and you will be ready to learn more about "
 "the various Python library modules described in :ref:`library-index`."
 msgstr ""
-"Este tutorial no pretende ser comprensible y cubrir todas las "
-"funcionalidades, o incluso ni las más utilizadas. Pretende introducir muchas "
-"de las funcionalidades más notables y dar una idea del estilo y el tipo de "
-"lenguaje. Después de leerlo podrás leer y escribir módulos y programas en "
-"Python y estarás listo para aprender sobre varias librerías y módulos "
-"descritos en :ref:`library-index`."
+"Este tutorial no pretende ser exhaustivo ni cubrir cada una de las "
+"características del lenguaje, ni siquiera las más utilizadas. En vez de eso, "
+"pretende introducir muchas de las funcionalidades más notables y brindar una "
+"idea clara acerca del estilo y el tipo de lenguaje que es Python. Después de "
+"leerlo podrás leer y escribir módulos y programas en Python, y estarás listo "
+"para aprender más acerca de las diversas librerías y módulos descritos en :"
+"ref:`library-index`."
 
 #: ../Doc/tutorial/index.rst:40
 msgid "The :ref:`glossary` is also worth going through."
