--- a/c-api/typehints.po
+++ b/c-api/typehints.po
@@ -67,7 +67,7 @@ msgstr "Aquí hay un ejemplo sobre cómo hacer un tipo de extensión genérica::
 
 #: ../Doc/c-api/typehints.rst:38
 msgid "The data model method :meth:`__class_getitem__`."
-msgstr "El método del modelo de datos :meta:`__class_getitem__`."
+msgstr "El método del modelo de datos :meth:`__class_getitem__`."
 
 #: ../Doc/c-api/typehints.rst:44
 msgid ""
